[workspace]
members = ["crates/core", "crates/backend", "crates/cli"]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2021"
authors = ["Codex Converter Team"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
base64 = "0.22"
thiserror = "2"
