[package]
name = "codex-backend"
version.workspace = true
edition.workspace = true

[dependencies]
codex-core = { path = "../core" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
